--- a/.github/workflows/FIRST.yml
+++ b/.github/workflows/FIRST.yml
@@ -20,7 +20,7 @@ jobs:
         run: python -m pip install pytest
 
       - name: RUN TESTS
-        run: python3 -m pytest
+        run: pytest
 
 
  
